# vep_api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
old_lib/vcfupload/: admin.py  apps.py  models.py
old_lib/vcfupload/migrations/: 0001_initial.py  0002_obfuscate_filenames_20200322_0320.py  0003_uploadvcf_original_filename.py
old_lib/vcfupload_rest/: apps.py  serializers.py  urls.py
old_lib/vep_webapp/: asgi.py  settings.py  urls.py  wsgi.py
old_tests/: conftest.py
old_tests/e2e/: test_vcfupload_rest.py
old_tests/unit/vcfupload/: test_models.py
tests/: conftest.py  test_pytest_fixtures.py
tests/e2e/: conftest.py  test_api.py  test_frontend.py  test_vep_helper.py
tests/integration/: test_api.py  test_frontend.py  test_vep_helpers.py  test_vep_parsers.py
tests/resources/: vep_output_file.txt
tests/unit/helpers/: test_vcf_helpers.py  test_vep_helpers.py  test_vep_parser.py
tests/unit/vcfupload/: test_models.py
tests/unit/webvep_api/: test_serializers.py
uploaded_files/: .gitignore
vcfupload/: models.py
vcfupload_rest/: serializers.py  urls.py  views.py  viewsets.py
vep_api/: asgi.py  settings.py  urls.py  wsgi.py
vep_webapp/: settings.py  urls.py
webvep/: manage.py  mypy.ini
webvep/helpers/: vcf_helpers.py  vep_99_genomes.txt  vep_helper.py  vep_parser.py
webvep/main/: asgi.py  settings.py  urls.py  wsgi.py
webvep/webvep/: asgi.py  settings.py  urls.py  wsgi.py
webvep/webvep_api/: apps.py  forms.py  serializers.py  urls.py  views.py
webvep/webvep_frontend/: apps.py  urls.py  views.py
webvep/webvep_frontend/templates/: home.html
