[tool.poetry]
name = "vep_api"
version = "0.1.0"
description = "API and frontend for VEP tool"
authors = ["Ian Vermes <ian.vermes@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
django = ">=2.2"
psycopg2-binary = "*"
pytest = "*"
uwsgi = "*"

[tool.poetry.dev-dependencies]
ipython = "*"
django-stubs = "^1.1.0"
mypy = "^0.740"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
